# memilio-tutorials

./: .clang-format  .gitignore  README.md  exercise1.py  hello-world.ipynb  requirements.txt  tutorial01.py  tutorial02.py  tutorial03.py  tutorial04.py  tutorial05.py  tutorial06.py  tutorial07.py  tutorial08.py  tutorial09.py  tutorial10.py  tutorial11.py  tutorial1a.ipynb  tutorial1a.py  tutorial2.py  tutorial3.py  tutorial3a.ipynb  tutorial3a.py  tutorial4.py  tutorial5.py  tutorial5a.ipynb  tutorial5a.py  tutorial7.py  tutorial7a.py  tutorial9.py  tutorial_6.py
.github/workflows/: run-tutorials.yml
cpp-tutorials/: CMakeLists.txt  README.md  exercise_ide.cpp  git_tag.cmake  plot_secir_results.py  tutorial.h  tutorial01.cpp  tutorial02.cpp  tutorial03.cpp  tutorial05.cpp  tutorial07.cpp  tutorial1.cpp  tutorial10.cpp  tutorial11.cpp  tutorial12_ensemble_sims.cpp  tutorial2.cpp  tutorial3.cpp  tutorial5.cpp  tutorial7.cpp  tutorial_abm_household1.cpp  tutorial_ide.cpp  tutorial_lct.cpp
cpp-tutorials/abm/: parameter_setter.cpp  parameter_setter.h  tutorial_abm_household1.cpp  tutorial_abm_households.cpp  tutorial_abm_testing.cpp  tutorial_abm_testing2.cpp  tutorial_abm_vaccination.cpp  visualize_abm.py  viz_and_run_abm_tutorials.py
cpp-tutorials/exercises/: CMakeLists.txt  exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise05.cpp  exercise07.cpp  exercise1.cpp  exercise10.cpp  exercise11.cpp  exercise3.cpp  exercise5.cpp  exercise7.cpp  exercise_ide.cpp  exercise_lct.cpp
data/: cases_1.csv  cases_2.csv  cases_3.csv  contact_matrix_baseline.txt  contact_matrix_minimum.txt  mobility_matrix.txt
exercises/: exercise01.py  exercise02.py  exercise03.py  exercise04.py  exercise05.py  exercise06.py  exercise07.py  exercise08.py  exercise09.py  exercise1.py  exercise10.py  exercise11.py  exercise3.py  exercise5.py  exercise7.py
